2007-05-26  Vincent Untz  <vuntz@gnome.org>

	* panel-applet-frame.c: (panel_applet_frame_set_flags_from_any):
	update the background if a handle was added. Fix initial background
	not working for handles.
	Fix bug #343168

2007-05-25  Vincent Untz  <vuntz@gnome.org>

	* panel-icon-names.h: add new icons
	* panel-menu-items.c: (activate_uri): handle x-nautilus-search uri by
	directly launching nautilus. This is ugly, though.
	(panel_place_menu_item_append_gtk_bookmarks): accept trash and
	x-nautilus-search uri, and also use the new functions from panel-util
	* panel-util.[ch]: (panel_util_get_vfs_method_display_name): new
	(panel_util_get_icon_for_uri_method): new
	(panel_util_get_label_for_uri): new
	(panel_util_get_icon_for_uri): new
	Most of this is copied from nautilus.
	* panel.c: (drop_uri): use panel_util_get_label_for_uri()
	(drop_urilist): add FIXME
	Fix bug #402628, bug #309598.

2007-05-25  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: (program_list_selection_changed): don't reset
	visibility of all programs in the program list. And beautify the code.
	Fix bug #339963

2007-05-25  Vincent Untz  <vuntz@gnome.org>

	* panel-ditem-editor.c: (panel_ditem_editor_setup_ui): set default
	response
	(panel_ditem_editor_activated): emits a reponse for the dialog
	(panel_ditem_editor_connect_signals): connect to the activate signal
	for the entries
	Fix bug #440690

2007-05-25  Vincent Untz  <vuntz@gnome.org>

	* panel-ditem-editor.c: (panel_ditem_editor_setup_ui): always put
	initial focus on the name entry
	Fix part of bug #440690

2007-05-25  Vincent Untz  <vuntz@gnome.org>

	* gnome-desktop-item-edit.c: (main): use
	panel_ditem_editor_new_directory() when it makes sense
	* panel-ditem-editor.[ch]: add a new type-directory construct-only
	property to know if the file is for .directory files
	(panel_ditem_editor_constructor): set the Type key to directory if
	we're editing a .directory file, and cache this information in
	type_directory 